Added services to get sprint history

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "fs": "0.0.2",
     "restify": "^3.0.2",
-    "sqlite3": "^3.0.8"
+    "sqlite3": "^3.0.8",
+	"sort-array": "0.1.0"
   }
 }
